[TAP-017] added starter.py & starter_agent.py

--- a/llama-index-core/tests/readers/file/BUILD
+++ b/llama-index-core/tests/readers/file/BUILD
@@ -8,10 +8,7 @@ python_tests(
     ],
 )
 
-files(
-    name="config",
-    sources=["data/**/*"]
-)
+files(name="config", sources=["data/**/*"])
 
 python_requirement(
     name="llama-index-readers-file",
