--- a/llama-index-integrations/embeddings/llama-index-embeddings-modelscope/tests/BUILD
+++ b/llama-index-integrations/embeddings/llama-index-embeddings-modelscope/tests/BUILD
@@ -1,7 +1,7 @@
 python_tests(
     dependencies=[
-        'llama-index-integrations/llms/llama-index-llms-modelscope:poetry#sentencepiece',
-        'llama-index-integrations/llms/llama-index-llms-modelscope:poetry#ms-swift',
+        "llama-index-integrations/llms/llama-index-llms-modelscope:poetry#sentencepiece",
+        "llama-index-integrations/llms/llama-index-llms-modelscope:poetry#ms-swift",
     ],
 )
 
