--- a/llama-index-integrations/embeddings/llama-index-embeddings-vertex/tests/BUILD
+++ b/llama-index-integrations/embeddings/llama-index-embeddings-vertex/tests/BUILD
@@ -1,3 +1,1 @@
-python_tests(
-    dependencies=["llama-index-core:poetry#pillow"]
-)
+python_tests(dependencies=["llama-index-core:poetry#pillow"])
