--- a/llama-index-integrations/extractors/llama-index-extractors-entity/tests/BUILD
+++ b/llama-index-integrations/extractors/llama-index-extractors-entity/tests/BUILD
@@ -1,3 +1,5 @@
 python_tests(
-    dependencies=["llama-index-integrations/extractors/llama-index-extractors-entity:poetry#huggingface-hub"],
+    dependencies=[
+        "llama-index-integrations/extractors/llama-index-extractors-entity:poetry#huggingface-hub"
+    ],
 )
