--- a/llama-index-integrations/readers/llama-index-readers-gitlab/BUILD
+++ b/llama-index-integrations/readers/llama-index-readers-gitlab/BUILD
@@ -1,4 +1,1 @@
-poetry_requirements(
-    name="poetry",
-    module_mapping={"python-gitlab": ["gitlab"]}
-)
+poetry_requirements(name="poetry", module_mapping={"python-gitlab": ["gitlab"]})
