--- a/llama-index-core/tests/text_splitter/BUILD
+++ b/llama-index-core/tests/text_splitter/BUILD
@@ -3,6 +3,5 @@ python_test_utils(
 )
 
 python_tests(
-    name="tests",
-    dependencies=["llama-index-core/pyproject.toml:poetry#tree-sitter"]
+    name="tests", dependencies=["llama-index-core/pyproject.toml:poetry#tree-sitter"]
 )
