--- a/llama-index-integrations/embeddings/llama-index-embeddings-cohere/tests/BUILD
+++ b/llama-index-integrations/embeddings/llama-index-embeddings-cohere/tests/BUILD
@@ -1,6 +1,4 @@
-python_tests(
-    dependencies=["llama-index-core:poetry#pillow"]
-)
+python_tests(dependencies=["llama-index-core:poetry#pillow"])
 
 python_test_utils(
     name="test_utils",
