--- a/llama-index-integrations/embeddings/llama-index-embeddings-gemini/tests/BUILD
+++ b/llama-index-integrations/embeddings/llama-index-embeddings-gemini/tests/BUILD
@@ -1,4 +1,6 @@
 python_tests(
     interpreter_constraints=[">=3.10"],
-    dependencies=["llama-index-integrations/embeddings/llama-index-embeddings-gemini:poetry"],
+    dependencies=[
+        "llama-index-integrations/embeddings/llama-index-embeddings-gemini:poetry"
+    ],
 )
