--- a/llama-index-integrations/llms/llama-index-llms-ibm/tests/BUILD
+++ b/llama-index-integrations/llms/llama-index-llms-ibm/tests/BUILD
@@ -1,6 +1,6 @@
 python_tests(
-	interpreter_constraints=[">=3.10"],
-	dependencies=["llama-index-integrations/llms/llama-index-llms-ibm:poetry#pyarrow"]
+    interpreter_constraints=[">=3.10"],
+    dependencies=["llama-index-integrations/llms/llama-index-llms-ibm:poetry#pyarrow"],
 )
 
 python_test_utils(
