--- a/llama-index-integrations/llms/llama-index-llms-modelscope/tests/BUILD
+++ b/llama-index-integrations/llms/llama-index-llms-modelscope/tests/BUILD
@@ -1,6 +1,6 @@
 python_tests(
     dependencies=[
-        'llama-index-integrations/llms/llama-index-llms-modelscope:poetry#sentencepiece',
-        'llama-index-integrations/llms/llama-index-llms-modelscope:poetry#ms-swift',
+        "llama-index-integrations/llms/llama-index-llms-modelscope:poetry#sentencepiece",
+        "llama-index-integrations/llms/llama-index-llms-modelscope:poetry#ms-swift",
     ],
 )
