--- a/llama-index-integrations/llms/llama-index-llms-octoai/BUILD
+++ b/llama-index-integrations/llms/llama-index-llms-octoai/BUILD
@@ -1,4 +1,1 @@
-poetry_requirements(
-    name="poetry",
-    module_mapping={"octoai-sdk": ["octoai"]}
-)
+poetry_requirements(name="poetry", module_mapping={"octoai-sdk": ["octoai"]})
