--- a/llama-index-integrations/llms/llama-index-llms-vllm/BUILD
+++ b/llama-index-integrations/llms/llama-index-llms-vllm/BUILD
@@ -1,4 +1,1 @@
-poetry_requirements(
-    name="poetry",
-    module_mapping={"vcrpy": ["vcr"]}
-)
+poetry_requirements(name="poetry", module_mapping={"vcrpy": ["vcr"]})
