--- a/llama-index-integrations/multi_modal_llms/llama-index-multi-modal-llms-huggingface/tests/BUILD
+++ b/llama-index-integrations/multi_modal_llms/llama-index-multi-modal-llms-huggingface/tests/BUILD
@@ -1,5 +1,7 @@
 python_tests(
-    dependencies=["llama-index-integrations/multi_modal_llms/llama-index-multi-modal-llms-huggingface:poetry#torchvision"],
+    dependencies=[
+        "llama-index-integrations/multi_modal_llms/llama-index-multi-modal-llms-huggingface:poetry#torchvision"
+    ],
 )
 
 python_test_utils(
