--- a/llama-index-integrations/readers/llama-index-readers-confluence/tests/BUILD
+++ b/llama-index-integrations/readers/llama-index-readers-confluence/tests/BUILD
@@ -1,3 +1,5 @@
 python_tests(
-    dependencies=["llama-index-integrations/readers/llama-index-readers-confluence:poetry"],
+    dependencies=[
+        "llama-index-integrations/readers/llama-index-readers-confluence:poetry"
+    ],
 )
