--- a/llama-index-integrations/readers/llama-index-readers-file/BUILD
+++ b/llama-index-integrations/readers/llama-index-readers-file/BUILD
@@ -1,4 +1,1 @@
-poetry_requirements(
-    name="poetry",
-    module_mapping={"fpdf2": ["fpdf"]}
-)
+poetry_requirements(name="poetry", module_mapping={"fpdf2": ["fpdf"]})
