--- a/llama-index-integrations/readers/llama-index-readers-gcs/tests/BUILD
+++ b/llama-index-integrations/readers/llama-index-readers-gcs/tests/BUILD
@@ -1,6 +1,9 @@
 python_tests(
     name="tests",
-    dependencies=["llama-index-integrations/readers/llama-index-readers-file/llama_index/readers/file/__init__.py", "llama-index-integrations/readers/llama-index-readers-gcs:poetry"],
+    dependencies=[
+        "llama-index-integrations/readers/llama-index-readers-file/llama_index/readers/file/__init__.py",
+        "llama-index-integrations/readers/llama-index-readers-gcs:poetry",
+    ],
 )
 
 python_requirement(
