--- a/llama-index-integrations/readers/llama-index-readers-github/tests/BUILD
+++ b/llama-index-integrations/readers/llama-index-readers-github/tests/BUILD
@@ -1,3 +1,5 @@
 python_tests(
-  dependencies=['llama-index-integrations/readers/llama-index-readers-file/llama_index/readers/file']
+    dependencies=[
+        "llama-index-integrations/readers/llama-index-readers-file/llama_index/readers/file"
+    ]
 )
