--- a/llama-index-integrations/readers/llama-index-readers-microsoft-sharepoint/tests/BUILD
+++ b/llama-index-integrations/readers/llama-index-readers-microsoft-sharepoint/tests/BUILD
@@ -1,3 +1,5 @@
 python_tests(
-    dependencies=["llama-index-integrations/readers/llama-index-readers-microsoft-sharepoint:poetry#llama-index-readers-file"],
+    dependencies=[
+        "llama-index-integrations/readers/llama-index-readers-microsoft-sharepoint:poetry#llama-index-readers-file"
+    ],
 )
