--- a/llama-index-integrations/readers/llama-index-readers-s3/tests/BUILD
+++ b/llama-index-integrations/readers/llama-index-readers-s3/tests/BUILD
@@ -1,6 +1,8 @@
 python_tests(
     name="tests",
-    dependencies=["llama-index-integrations/readers/llama-index-readers-file/llama_index/readers/file/__init__.py"]
+    dependencies=[
+        "llama-index-integrations/readers/llama-index-readers-file/llama_index/readers/file/__init__.py"
+    ],
 )
 
 python_requirement(
