--- a/llama-index-integrations/retrievers/llama-index-retrievers-bm25/BUILD
+++ b/llama-index-integrations/retrievers/llama-index-retrievers-bm25/BUILD
@@ -1,4 +1,1 @@
-poetry_requirements(
-    name="poetry",
-    module_mapping={"PyStemmer": ["Stemmer"]}
-)
+poetry_requirements(name="poetry", module_mapping={"PyStemmer": ["Stemmer"]})
