--- a/llama-index-integrations/retrievers/llama-index-retrievers-vertexai-search/tests/BUILD
+++ b/llama-index-integrations/retrievers/llama-index-retrievers-vertexai-search/tests/BUILD
@@ -1,3 +1,5 @@
 python_tests(
-    dependencies=["llama-index-integrations/retrievers/llama-index-retrievers-vertexai-search:poetry"],
+    dependencies=[
+        "llama-index-integrations/retrievers/llama-index-retrievers-vertexai-search:poetry"
+    ],
 )
