--- a/llama-index-integrations/tools/llama-index-tools-finance/BUILD
+++ b/llama-index-integrations/tools/llama-index-tools-finance/BUILD
@@ -1,4 +1,1 @@
-poetry_requirements(
-    name="poetry",
-    module_mapping={"newsapi-python": ["newsapi"]}
-)
+poetry_requirements(name="poetry", module_mapping={"newsapi-python": ["newsapi"]})
