--- a/llama-index-integrations/vector_stores/llama-index-vector-stores-databricks/BUILD
+++ b/llama-index-integrations/vector_stores/llama-index-vector-stores-databricks/BUILD
@@ -1,4 +1,3 @@
 poetry_requirements(
-    name="poetry",
-    module_mapping={"databricks-vectorsearch": ["databricks"]}
+    name="poetry", module_mapping={"databricks-vectorsearch": ["databricks"]}
 )
