--- a/llama-index-integrations/vector_stores/llama-index-vector-stores-lancedb/BUILD
+++ b/llama-index-integrations/vector_stores/llama-index-vector-stores-lancedb/BUILD
@@ -1,4 +1,1 @@
-poetry_requirements(
-    name="poetry",
-    module_mapping={"pylance": ["lance"]}
-)
+poetry_requirements(name="poetry", module_mapping={"pylance": ["lance"]})
