--- a/llama-index-integrations/vector_stores/llama-index-vector-stores-mariadb/tests/BUILD
+++ b/llama-index-integrations/vector_stores/llama-index-vector-stores-mariadb/tests/BUILD
@@ -1,3 +1,5 @@
 python_tests(
-  dependencies=["llama-index-integrations/vector_stores/llama-index-vector-stores-mariadb:poetry#pymysql"]
+    dependencies=[
+        "llama-index-integrations/vector_stores/llama-index-vector-stores-mariadb:poetry#pymysql"
+    ]
 )
