--- a/llama-index-packs/llama-index-packs-code-hierarchy/BUILD
+++ b/llama-index-packs/llama-index-packs-code-hierarchy/BUILD
@@ -1,4 +1,6 @@
 poetry_requirements(
     name="poetry",
-    module_mapping={"llama-index-readers-file": ["llama_index.readers.file", "llama_index.readers"]}
+    module_mapping={
+        "llama-index-readers-file": ["llama_index.readers.file", "llama_index.readers"]
+    },
 )
