--- a/llama-index-packs/llama-index-packs-code-hierarchy/tests/BUILD
+++ b/llama-index-packs/llama-index-packs-code-hierarchy/tests/BUILD
@@ -1,5 +1,7 @@
 python_tests(
-  dependencies=['llama-index-integrations/readers/llama-index-readers-file/llama_index/readers/file']
+    dependencies=[
+        "llama-index-integrations/readers/llama-index-readers-file/llama_index/readers/file"
+    ]
 )
 
 python_test_utils(
