--- a/llama-index-packs/llama-index-packs-deeplake-multimodal-retrieval/tests/BUILD
+++ b/llama-index-packs/llama-index-packs-deeplake-multimodal-retrieval/tests/BUILD
@@ -1,3 +1,5 @@
 python_tests(
-    dependencies=["llama-index-integrations/vector_stores/llama-index-vector-stores-deeplake:poetry#pyjwt"]
+    dependencies=[
+        "llama-index-integrations/vector_stores/llama-index-vector-stores-deeplake:poetry#pyjwt"
+    ]
 )
