--- a/llama-index-packs/llama-index-packs-raptor/BUILD
+++ b/llama-index-packs/llama-index-packs-raptor/BUILD
@@ -1,4 +1,3 @@
 poetry_requirements(
-    name="poetry",
-    module_mapping={"umap-learn": ["umap"], "scikit-learn": ["sklearn"]}
+    name="poetry", module_mapping={"umap-learn": ["umap"], "scikit-learn": ["sklearn"]}
 )
